CI action for Cloud Functions
Updating Github Action to only target Cloud Functions

--- a/.github/workflows/functions-ci.yml
+++ b/.github/workflows/functions-ci.yml
@@ -1,12 +1,16 @@
-name: CI
+name: Cloud Funcions CI
 
 on:
   push:
+    paths: 
+      - functions/*
     branches: 
     - dev
     - feature/*
     - hotfix/*
   pull_request:
+    paths: 
+      - functions/*
     branches: 
     - master
     - dev
@@ -19,6 +23,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
     - name: Install dependencies
+      working-directory: functions
       run: npm ci
     - name: Run tests
+      working-directory: functions
       run: npm test
