Missing "run" command in build step

--- a/web/cloudbuild.yaml
+++ b/web/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
     name: node
     entrypoint: npm
     dir: "./web"
-    args: ["build"]
+    args: ["run", "build"]
 
   - id: Deploying to Firebase
     name: "gcr.io/$PROJECT_ID/firebase"
