--- a/.github/workflows/functions-ci.yml
+++ b/.github/workflows/functions-ci.yml
@@ -27,4 +27,4 @@ jobs:
       run: npm ci
     - name: Run tests
       working-directory: functions
-      run: npm test
+      run: npm test -- --passWithNoTests
