--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -20,6 +20,8 @@
   "plugins": ["react"],
   "rules": {
     "comma-dangle": "off",
+    "react/prop-types": "off",
+    "operator-linebreak": ["error", "after"],
     "prettier/prettier": [
       "error",
       {
