--- a/web/package.json
+++ b/web/package.json
@@ -48,7 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && CI=true npm test"
     }
   },
   "lint-staged": {
